# chess-gpt

./: .gitignore  README.md  pyproject.toml
fine-tuning/: .env.example  .modalignore  Makefile  README.md  main.py  pyproject.toml
fine-tuning/config/: __init__.py  config.py
fine-tuning/core/: __init__.py  data_processing.py  infra.py  model_setup.py  prompt.py  trainer.py
fine-tuning/evaluation/: __init__.py  checkpoints.py  evals.py  game.py  players.py
fine-tuning/outputs/LFM2-350M-r16-a32-20250919-025808/: README.md
fine-tuning/outputs/LFM2-350M-r16-a32-20250919-025808/checkpoint-10000/: optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
fine-tuning/outputs/LFM2-350M-r16-a32-20250919-025808/checkpoint-8000/: adapter_config.json  adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
fine-tuning/outputs/LFM2-350M-r16-a32-20250919-025808/checkpoint-9000/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
fine-tuning/outputs/LFM2-350M-r16-a32-20250919-025808/final_model/: README.md  adapter_model.safetensors  tokenizer_config.json
fine-tuning/utils/: __init__.py  download_model.py  generate_instruction_dataset.py  generate_merged_model.py  push_model_to_hf.py
game/ChessGPT/: ChessGPTApp.swift
game/ChessGPT.xcodeproj/: project.pbxproj
game/ChessGPT.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
game/ChessGPT.xcodeproj/project.xcworkspace/xcuserdata/paulabartabajo.xcuserdatad/: UserInterfaceState.xcuserstate
game/ChessGPT.xcodeproj/xcuserdata/paulabartabajo.xcuserdatad/xcschemes/: xcschememanagement.plist
game/ChessGPT/Core/: ChessGPTApp.swift
game/ChessGPT/Managers/: ChessAIManager.swift  GameManager.swift
game/ChessGPT/Models/: ChessGame.swift  Configuration.swift  LLMPlayer.swift
game/ChessGPT/Views/: BoardView.swift  ContentView.swift  GameControlsView.swift
