[project]
name = "chess-gpt-oss"
version = "0.1.0"
description = "Chess game with GPT-OSS AI for Android using Python backend and HTML frontend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core backend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-chess>=1.999",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # API & WebSocket
    "httpx>=0.27.0",
    "websockets>=13.0",
    "python-multipart>=0.0.9",
    # Utils
    "python-dotenv>=1.0.0",
    "rich>=14.0.0",
    # For future AI integration
    "torch>=2.5.0",
    "transformers>=4.46.0",
    "accelerate>=0.34.0",
    "safetensors>=0.4.0",
    "modal>=1.1.4",
    "playwright>=1.55.0",
    "pillow>=11.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.7.0",
    "pyright>=1.1.0",
    "ipykernel>=6.29.0",
]

training = [
    "unsloth[colab-new]>=2024.11",
    "trl>=0.11.0",
    "datasets>=3.0.0",
    "wandb>=0.18.0",
    "bitsandbytes>=0.44.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "I", "N", "W", "B", "Q"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingImports = "warning"
reportMissingTypeStubs = false

# Package discovery handled automatically
# No explicit package configuration needed for development

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
