[project]
name = "chess-gpt"
version = "0.1.0"
description = "Production-grade fine-tuning system for GPT-OSS 20B chess model"
readme = "README.md"
authors = [
    { name = "Carrick Cheah", email = "carrick@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    # Core ML dependencies
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "trl>=0.8.0",
    "peft>=0.10.0",
    # Chess and data processing
    "chess>=1.10.0",
    "python-chess>=1.999",
    "datasets>=2.18.0",
    "pandas>=2.2.0",
    "numpy>=1.24.0",
    "huggingface-hub>=0.22.0",
    # Configuration and utilities
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "fire>=0.6.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
    # Monitoring and logging
    "wandb>=0.16.0",
    "tensorboard>=2.16.0",
    # Export and optimization
    "onnx>=1.15.0",
    "onnxruntime>=1.17.0",
    "fastapi>=0.116.2",
    "uvicorn>=0.35.0",
    "modal>=1.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chess_gpt"]

[tool.ruff]
line-length = 120
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]
ignore = ["E501", "B008", "B905"]
exclude = [
    ".git",
    "__pycache__",
    "docs",
    "build",
    "dist",
    ".venv",
    "venv",
    ".eggs",
    "*.egg",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["F401", "F811"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-ra -q --strict-markers"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''
